docs(数据类型): 补充字符串类型的默认值和特性说明

--- a/01-基础语法/1_02数据类型.md
+++ b/01-基础语法/1_02数据类型.md
@@ -109,6 +109,11 @@ func main() {
 ```
 ### 5. 字符串类型
 Go语言中的字符串以原生数据类型出现，一个字符串是一个不可改变的字节序列，字符串可以包含任意的数据，但是通常是用来包含可读的文本。Go 语言里的字符串的内部实现使用`UTF-8`编码。 字符串的值为`双引号(")`中的内容，可以在Go语言的源码中直接添加非ASCII码字符。
+* 默认值: ""。
+* 字符串不可变: 字符串是一个不可变的字节序列，字符串的值在创建后不能被修改。
+* 字符串的长度: 字符串的长度为字符串中包含的字符个数。
+* 字符串的拼接: 字符串可以使用`+`进行拼接。
+
 **示例:**
 ```go
 package main
