docs: 增加文章总结

--- a/01-基础语法/1_01基础知识.md
+++ b/01-基础语法/1_01基础知识.md
@@ -83,3 +83,14 @@ CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build
 CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build
 ```
 坚持学习，提升自己！Go语言学习之路，让我们一起加油！
+
+### 总结
+Go语言作为一种现代化的编程语言，具有以下特点：
+
+1. 语言特性丰富，包括自动垃圾回收、内置类型、多返回值和错误处理。
+2. 命名规则简单，关键字仅25个，预定义标识符37个。
+3. 声明方式有四种：var(变量)、const(常量)、type(类型)和func(函数)。
+4. 编译工具多样：go build(编译)、go run(直接运行)和go install(编译并安装)。
+5. 跨平台编译能力强，可在一个平台构建适用于其他操作系统的可执行文件。
+
+掌握这些基础知识，是学习Go语言的第一步。
