--- a/01-基础语法/1_04运算符.md
+++ b/01-基础语法/1_04运算符.md
@@ -112,3 +112,14 @@ func main() {
     fmt.Println(a) // 20
 }
 ```
+
+### 总结
+Go语言提供了多种运算符，用于执行各种操作。与其他语言相比，Go的运算符有以下特点：
+
+1. 算术运算符支持基本数学计算，但++和--是语句而非运算符，只能单独使用。
+2. 关系运算符返回布尔值，用于条件判断和流程控制。
+3. 逻辑运算符（&&、||、!）用于组合多个条件表达式，构建复杂判断逻辑。
+4. 位运算符提供位级操作能力，适用于底层编程和性能优化场景。
+5. 赋值运算符包括简单赋值和复合赋值，提高代码编写效率。
+
+熟练掌握这些运算符的使用和优先级，是编写高效Go程序的基础。
