--- a/01-基础语法/1_03变量和常量.md
+++ b/01-基础语法/1_03变量和常量.md
@@ -179,3 +179,14 @@ const (
     e, f                      //3,4  
 )
 ```
+
+### 总结
+Go语言中的变量和常量为程序提供了灵活的数据存储方式。与其他语言相比，Go的变量和常量有以下特点：
+
+1. 变量声明方式多样，包括标准声明、批量声明、短变量声明(:=)和类型推导。
+2. 变量命名规则简单，提供匿名变量(_)用于占位，不占用内存空间。
+3. 常量必须在定义时赋值，可以是显式类型或由编译器推导类型。
+4. 特有的iota常量计数器，便于创建枚举类型和递增常量序列。
+5. 全局变量和局部变量有明确的作用域规则，函数外的语句必须以关键字开始。
+
+理解变量和常量的声明和使用方式，是编写清晰Go程序的基础。
