--- a/01-基础语法/1_05流程控制.md
+++ b/01-基础语法/1_05流程控制.md
@@ -355,7 +355,9 @@ for i := 0; i < 5; i++ {
 ```
 
 ##### 3.3 goto 语句
-`goto` 语句可以无条件地转移到程序中指定的标签位置。
+Go语言的 `goto` 语句可以无条件地转移到程序中指定的标签位置。
+`goto` 语句通常与条件语句配合使用。可用来实现条件转移, 构建循环、跳出循环体等功能。
+但是在结构化程序设计中一般不主张使用 `goto` 语句，以免造成程序流程的混乱，使理解和调试程序都产生困难。
 
 ```go
 // 基本语法
@@ -366,16 +368,37 @@ goto 标签
 
 **示例：**
 ```go
-fmt.Println("goto 示例")
-var i = 0
-loop:
-    fmt.Println(i)
-    i++
-    if i < 5 {
-        goto loop
+// 定义局部变量
+var a int = 10
+
+// 循环
+LOOP: 
+    for a < 20 {
+        if a == 15 {
+        // 跳过迭代
+        a = a + 1
+        goto LOOP
     }
-// 输出: 0 1 2 3 4
+   fmt.Printf("a的值为 : %d\n", a)
+   a++
+}
 ```
+**示例:**跳出多层循环
+```go
+for i := 0; i < 10; i++ {
+    for j := 0; j < 10; j++ {
+        if i == 2 {
+            goto end
+        }
+    }
+}
+return
+end:
+    fmt.Println("end")
+```
+
+
+
 
 **注意事项：**
 - `goto` 语句应谨慎使用，过度使用会导致代码难以理解和维护。
